tests/baselines/reference/parserErrorRecovery_ClassElement2.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ClassElement2.ts (1 errors) ====
    module M {
      class C {
    
      enum E {
      ~~~~
!!! parserErrorRecovery_ClassElement2.ts(4,3): error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
      }
    }